# findresonances

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: findresonances.h  main.h
python/: fdmMatrixG.py  findresonances.py
src/: example1.cpp  findresonances.cpp  main.cpp
